.provarCaches/00D5f000005vwGkEAI/objects/rstk__soorddmdcst__c.object
<CustomObject>
    <description>soorddmdcst__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>This is an internal system field used to define the external ID of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__soorddmdcst_ordno__c + &apos;_&apos; +  rstk__soorddmdcst_compitem__r.rstk__icitem_item__r.rstk__peitem_item__c</formula>
        <inlineHelpText>Internal formula for constructing the associated name field.</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmdcst_comments__c</fullName>
        <description>The user can place comments on an issue transaction and this field is updated with those comments. In a lot and serial controlled environment, this SOORDDMDCST record will not be purged in sales order purge so that comments can be retained for historical purposes. (PG)</description>
        <inlineHelpText>Comments associated with this Sales order Line</inlineHelpText>
        <label>COMMENTS</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmdcst_compitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Component Item Number on this Sales Order Line</inlineHelpText>
        <label>Component Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Sales Order Demand Cost</relationshipLabel>
        <relationshipName>SO_Demand_Cost1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmdcst_condcd__c</fullName>
        <description>This field is initialized to null.

Currently there are no plans to use this field.

At the present time this is a hidden field. (PG)</description>
        <inlineHelpText>This is the Condition Code for this Sales Order Line</inlineHelpText>
        <label>CONDCD</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmdcst_cosacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SOORDDMDCST_COSACCT is set from the SOLINE_COSACCT. (PG)</description>
        <inlineHelpText>This is an Internal Rootstock field</inlineHelpText>
        <label>cosacct_ui</label>
        <referenceTo>rstk__syacc__c</referenceTo>
        <relationshipLabel>Sales Order Demand Cost</relationshipLabel>
        <relationshipName>SO_Demand_Cost</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmdcst_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This record will correlate to a valid SOORDDMD_DIV.  (PG)</description>
        <inlineHelpText>This is the Division associated with the Sales Order Line</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Sales Order Demand Cost (Division)</relationshipLabel>
        <relationshipName>divsoorddmdcsts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmdcst_iccontainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Inventory Container associated with the Sales Order Demand.</inlineHelpText>
        <label>Inventory Container</label>
        <referenceTo>rstk__iccontainer__c</referenceTo>
        <relationshipLabel>Sales Order Demand Cost</relationshipLabel>
        <relationshipName>soorddmdcsts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmdcst_icitemsrl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory By Serial Number</label>
        <referenceTo>rstk__icitemsrl__c</referenceTo>
        <relationshipLabel>Sales Order Demand Cost</relationshipLabel>
        <relationshipName>soorddmdcsts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmdcst_invdiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the Inventory Division.

When doing a sales order issue, it is this division that is used when pulling the inventory from the ICLOCITEM. (The ICLOCITEM_DIV is accessed using the SOORDDMD_INVDIV)

A field that will be added in the future is the SOORDDMDCST_INVSITE which will denote the Site from which the Sales Order Line is shipped. (PG)</description>
        <inlineHelpText>This is the Division associated with the Sales Order Line</inlineHelpText>
        <label>invdiv</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Sales Order Demand Cost (invdiv)</relationshipLabel>
        <relationshipName>SO_Demand_Cost</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmdcst_invsite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the Inventory Site where the item will be picked.  This is set to the SOORDDMD_INVSITE. (PG)</description>
        <inlineHelpText>This is the site associated with the Sales Order Line</inlineHelpText>
        <label>invsite</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>Sales Order Demand Cost (invsite)</relationshipLabel>
        <relationshipName>SO_Demand_Cost1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmdcst_itemrev__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Currently, there are no plans to track inventory by ‘item revision’ which was the intent of this field.

At the present time this is a hidden field. (PG)</description>
        <inlineHelpText>This is the Revision for this Sale Order Line Item</inlineHelpText>
        <label>itemrev_ui</label>
        <referenceTo>rstk__peitemrev__c</referenceTo>
        <relationshipLabel>Sales Order Demand Cost</relationshipLabel>
        <relationshipName>SO_Demand_Cost</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmdcst_lne__c</fullName>
        <description>This record will correlate to a valid SOORDDMD_LNE. (PG)</description>
        <inlineHelpText>This is the Sales Order Line Number</inlineHelpText>
        <label>LNE</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmdcst_lnerel__c</fullName>
        <description>This is set to the Shipper Number (i.e. the packing slip number). (PG)</description>
        <inlineHelpText>Line release - incremented when Shipper created</inlineHelpText>
        <label>LNEREL</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmdcst_locid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is set to the ICLOCITEM_LOCID that corresponds to the location id of the issue. (PG)</description>
        <inlineHelpText>This is the Location ID associated with the Sales Order Line</inlineHelpText>
        <label>locid</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>Sales Order Demand Cost</relationshipLabel>
        <relationshipName>soorddmdcsts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmdcst_locnum__c</fullName>
        <description>This is set to the ICLOCITEM_LOCNUM that corresponds to the location number of the issue. (PG)</description>
        <inlineHelpText>This is the Location Number associated with the Sales Order Line</inlineHelpText>
        <label>locnum</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmdcst_loctype__c</fullName>
        <description>This is the value of the ICLOCITEM_LOCTYPE from which the issue was transacted.

The only valid values are ‘O’ for On Hand and in certain cases ‘C’ for Consigned.

‘N’ (Non Nettable) is not a valid value

‘C’ (Consigned) is valid

This field cannot be maintained by the user. (PG)</description>
        <inlineHelpText>This is the Location Type of this Item for this Sales Order Line</inlineHelpText>
        <label>Stock Loc Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consigned</fullName>
                </value>
                <value>
                    <fullName>Non-nettable</fullName>
                </value>
                <value>
                    <fullName>On Hand</fullName>
                </value>
                <value>
                    <fullName>Outside Operation</fullName>
                </value>
                <value>
                    <fullName>Vendor Managed Inventory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__soorddmdcst_lotno__c</fullName>
        <inlineHelpText>This is the Lot Number of this Item for this Sales Order Line</inlineHelpText>
        <label>Lot Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmdcst_ordno__c</fullName>
        <inlineHelpText>This is the Sales Order Number</inlineHelpText>
        <label>ZZZ_OBSOLETE</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmdcst_proj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>When the issue occurs that creates this SOORDDMDCST record, this must equal the SOORDDMD_ISSPROJ and the ICLOCITEM_PROJ. (PG)</description>
        <inlineHelpText>This is the Project associated with the Sales Order Line</inlineHelpText>
        <label>proj_ui</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>Sales Order Demand Cost</relationshipLabel>
        <relationshipName>SO_Demand_Cost</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmdcst_qtyiss__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Quantity Issued for this Item on the Sales Order Line</inlineHelpText>
        <label>Qty. Issued</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmdcst_seq__c</fullName>
        <inlineHelpText>This is the Sequence number for this Cost</inlineHelpText>
        <label>Sequence Number</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmdcst_seqno__c</fullName>
        <inlineHelpText>This is an Obsolete field</inlineHelpText>
        <label>ZZZ_OBSOLETE</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmdcst_site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Site associated with the Sales Order Line</inlineHelpText>
        <label>site_ui</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>Sales Order Demand Cost (site_ui)</relationshipLabel>
        <relationshipName>SO_Demand_Cost</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmdcst_soorddmd__c</fullName>
        <inlineHelpText>This is the Sales Order Number associated with the Sales Order Line</inlineHelpText>
        <label>Sales Order Demand</label>
        <referenceTo>rstk__soorddmd__c</referenceTo>
        <relationshipLabel>Sales Order Demand Cost</relationshipLabel>
        <relationshipName>soorddmdcsts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmdcst_srlno__c</fullName>
        <description>If this component is a serial controlled item (PEITEM_TRACKSRL = ‘T’), then this field is set to the Serial Number from the ICLOCITEM_LOCSEC record (whose ICLOCITEM_TRACKIND = ‘S’ for serial controlled items).

If on one issue there are many serial numbers, then there is one SOORDDMDCST for each serial number. (PG)</description>
        <inlineHelpText>This is the Serial Number of this Item for this Sales Order Line</inlineHelpText>
        <label>SRLNO</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmdcst_ucstfrght__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Unit Cost of Freight for this Item on the Sales Order Line</inlineHelpText>
        <label>ucstfrght</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmdcst_ucstlab__c</fullName>
        <defaultValue>0</defaultValue>
        <description>On the issue that added (or updated) this record, this field is updated with component’s unit labor cost. 

In a standard cost system, this is derived from ICITEMSTD_STDUCSTLAB 

In a weighted average cost system, this derived from the ‘weighted average’ of that which was issued prior (creating this SOORDDMDCST) and from that which is issued now. (PG)</description>
        <inlineHelpText>This is the Standard Unit Labor Cost of the Product</inlineHelpText>
        <label>UCSTLAB</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmdcst_ucstmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Standard Unit Material Cost of the Product</inlineHelpText>
        <label>Unit Cost - Material</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmdcst_ucstohdfrng__c</fullName>
        <defaultValue>0</defaultValue>
        <description>On the issue that added (or updated) this record, this field is updated with component’s unit overhead fringe cost. 

In a standard cost system, this is derived from ICITEMSTD_STDUCSTOHDFRNG 

In a weighted average cost system, this derived from the ‘weighted average’ of that which was issued prior (creating this SOORDDMDCST) and from that which is issued now. (PG)</description>
        <inlineHelpText>This is the Standard Overhead Fringe Cost of the Product</inlineHelpText>
        <label>UCSTOHDFRNG</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmdcst_ucstohdlab__c</fullName>
        <defaultValue>0</defaultValue>
        <description>On the issue that added (or updated) this record, this field is updated with component’s unit overhead labor cost. 

In a standard cost system, this is derived from ICITEMSTD_STDUCSTOHDLAB 

In a weighted average cost system, this derived from the ‘weighted average’ of that which was issued prior (creating this SOORDDMDCST) and from that which is issued now. (PG)</description>
        <inlineHelpText>This is the Standard Unit Labor Cost of the Product</inlineHelpText>
        <label>UCSTOHDLAB</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmdcst_ucstohdmach__c</fullName>
        <defaultValue>0</defaultValue>
        <description>On the issue that added (or updated) this record, this field is updated with component’s unit overhead machine cost. 

In a standard cost system, this is derived from ICITEMSTD_STDUCSTOHDMACH 

In a weighted average cost system, this derived from the ‘weighted average’ of that which was issued prior (creating this SOORDDMDCST) and from that which is issued now. (PG)</description>
        <inlineHelpText>This is the Standard Unit Overhead Machine Cost of the Product</inlineHelpText>
        <label>UCSTOHDMACH</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmdcst_ucstohdmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <description>On the issue that added (or updated) this record, this field is updated with component’s unit overhead material cost. 

In a standard cost system, this is derived from ICITEMSTD_STDUCSTOHDMTL 

In a weighted average cost system, this derived from the ‘weighted average’ of that which was issued prior (creating this SOORDDMDCST) and from that which is issued now. (PG)</description>
        <inlineHelpText>This is the Standard Unit Overhead Material Cost of the Product</inlineHelpText>
        <label>UCSTOHDMTL</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmdcst_ucstothlnd__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Unit Cost for Other Indirect Costs for this Item on the Sales Order Line</inlineHelpText>
        <label>ucstothlnd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmdcst_ucstsublab__c</fullName>
        <defaultValue>0</defaultValue>
        <description>On the issue that added (or updated) this record, this field is updated with component’s unit subcontract labor cost. 

In a standard cost system, this is derived from ICITEMSTD_STDUCSTSUBLAB 

In a weighted average cost system, this derived from the ‘weighted average’ of that which was issued prior (creating this SOORDDMDCST) and from that which is issued now. (PG)</description>
        <inlineHelpText>This is the Standard Unit Subcontract Labor Cost of the Product</inlineHelpText>
        <label>UCSTSUBLAB</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmdcst_ucstsubmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <description>On the issue that added (or updated) this record, this field is updated with component’s unit subcontract material cost. 

In a standard cost system, this is derived from ICITEMSTD_STDUCSTSUBMTL 

In a weighted average cost system, this derived from the ‘weighted average’ of that which was issued prior (creating this SOORDDMDCST) and from that which is issued now. (PG)</description>
        <inlineHelpText>This is the Standard Unit Subcontract Material Cost of the Product</inlineHelpText>
        <label>UCSTSUBMTL</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmdcst_wbs__c</fullName>
        <description>This field is initialized to null.

Currently there are no plans to use this field.

At the present time this is a hidden field. (PG)</description>
        <inlineHelpText>This is the WBS account associated with the Sales Order Line</inlineHelpText>
        <label>WBS</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Sales Order Demand Cost</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__soorddmdcst_lotno__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__soorddmdcst_lotno__c</field>
            <operation>contains</operation>
            <value>L7</value>
        </filters>
        <filters>
            <field>rstk__soorddmdcst_lotno__c</field>
            <operation>contains</operation>
            <value>55</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RS_SO_Demand_Cost</fullName>
        <columns>NAME</columns>
        <columns>rstk__soorddmdcst_soorddmd__c</columns>
        <columns>rstk__soorddmdcst_compitem__c</columns>
        <columns>rstk__soorddmdcst_qtyiss__c</columns>
        <columns>rstk__soorddmdcst_ucstlab__c</columns>
        <columns>rstk__soorddmdcst_ucstmtl__c</columns>
        <columns>rstk__soorddmdcst_seq__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__soorddmdcst_lotno__c</columns>
        <columns>rstk__soorddmdcst_srlno__c</columns>
        <filterScope>Everything</filterScope>
        <label>SO Demand Cost</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>SOORDDMDCST Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Order Demand Cost</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>